updated some errors

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="Gide">Gide</string>
     <string name="dismiss">DISMISS</string>
     <string name="TASK" >Take Out Trash</string>
-    <string name="MESSAGE" >DON\'T FORGET TO DO THE LAUNDRY</string>
+    <string name="MESSAGE" >Do the Laundry</string>
     <string name="imageview" >imageview</string>
     <string name="exit_button">Exit Button</string>
     <string name="random">RANDOM</string>
